Jupyter notebooks/Xist analysis/Motif_analyses/MEME_TARDBP_Xist_RNA_binding_sites/dreme_msgs.txt
  File "/Users/sander/meme/bin/dreme", line 765
    print "Finding secondary RE in left flank..."
                                                ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Finding secondary RE in left flank...")?
